# ribzip2

./: Cargo.toml  LICENSE  README.md  TODO.md
.github/workflows/: build.yml
cli/: .gitignore  Cargo.toml  tests.sh
cli/samples/: idiot.txt  pepper.txt
cli/src/: main.rs  stream.rs
cli/src/bitwise/: bitreader.rs  bitwriter.rs  mod.rs
cli/src/lib/: mod.rs
cli/src/lib/bitwise/: bitreader.rs  bitwriter.rs  mod.rs
cli/src/lib/block/: block_data.rs  block_decoder.rs  block_encoder.rs  code_table.rs  crc32.rs  mod.rs  mtf.rs  selectors.rs  symbol_map.rs  zle.rs
cli/src/lib/block/bwt/: bwt_internal.rs  duval.rs  mod.rs  sais.rs
cli/src/lib/block/huffman/: huffman_internal.rs  mod.rs  package_merge.rs  reader.rs
cli/src/lib/block/symbol_statistics/: kmeansclustering.rs  mod.rs
cli/src/lib/stream/: mod.rs
cli/temp/: .gitignore
lib/: Cargo.toml  README.md
lib/src/: lib.rs
lib/src/bitwise/: bitreader.rs  bitwriter.rs
lib/src/block/: block_decoder.rs  block_encoder.rs  code_table.rs  delta.rs  mod.rs  mtf.rs  rle.rs  selectors.rs  symbol_map.rs  zle.rs
lib/src/block/bwt/: bwt_internal.rs  bwt_inverse.rs  duval.rs  mod.rs
lib/src/block/huffman/: huffman_internal.rs  mod.rs  reader.rs
lib/src/block/symbol_statistics/: mod.rs
lib/src/stream/: mod.rs
