[package]
name = "ribzip2"
version = "0.3.0"
edition = "2021"
license = "MIT"
authors = ["Philipp Vollmer"]
description = "a bzip2 cli written in pure rust"
readme = "../README.md"
repository = "https://github.com/torfmaster/ribzip2"

[dependencies]
structopt = "0.3.25"
libribzip2 = { path="../lib"}
